Bug 238579 - nepomuk doesn't work with afs homes
Summary: nepomuk doesn't work with afs homes
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-23 14:30 UTC by Robert Gerlach
Modified: 2011-01-06 20:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gerlach 2010-05-23 14:30:45 UTC
Version:            (using KDE 4.4.2)
OS:                Linux
Installed from:    Ubuntu Packages

I think it's because the socket in .kde/share/apps/nepomuk. Moving this folder to /tmp and symlink it make nepomuk work. Maybe it's enough to move the socket to .kde/socket-$hostname (can't try this because a symlink is deleted at the start).
Comment 1 Sebastian Trueg 2011-01-06 20:30:12 UTC
SVN commit 1212382 by trueg:

Use the socket dir for the Soprano communication socket to avoid problems with some file systems.

BUG:238579

 M  +1 -1      storage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212382