Use the socket dir for the Soprano communication socket to avoid problems with some file systems.

BUG:238579

svn path=/trunk/KDE/kdebase/runtime/; revision=1212382